tests/ui/fallback/non-unit-variant-without-fallback.stderr
error: FromBits only supports unit variants for variants without `#[fallback]`

         = help: add a fallback variant or change this variant to a unit

 --> tests/ui/fallback/non-unit-variant-without-fallback.rs:8:5
  |
8 |     Is(u2),
  |     ^^^^^^
